Feature: Added Routes protected with new alert messages!

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,5 +6,6 @@
 @import "./components/auth";
 @import "./components/journal";
 @import "./components/notes";
+@import "./components/loading";
 //botones
 @import "./components/bottom";
