--- a/src/styles/components/_bottom.scss
+++ b/src/styles/components/_bottom.scss
@@ -1,68 +1,80 @@
 .btn {
-    background-color: transparent;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 12px;
-    padding: 7px 10px 7px 10px;
-    transition: background-color 0.3s ease;
-    &:focus {
-        outline: none;
-    }
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 7px 10px 7px 10px;
+  transition: background-color 0.3s ease;
+  &:focus {
+    outline: none;
+  }
 }
 
 .btn-primary {
-    background-color: $primary;
-    border-radius: 2px;
+  background-color: $primary;
+  border-radius: 2px;
 
-    &:disabled {
-        background-color: lighten($color: $primary, $amount: 15);
-    }
-    &:hover {
-        background-color: darken($color: $primary, $amount: 20);
-    }
+  &:disabled {
+    background-color: lighten($color: $primary, $amount: 15);
+  }
+  &:hover {
+    background-color: darken($color: $primary, $amount: 20);
+  }
+}
+
+.btn-danger {
+  background-color: $primary;
+  border-radius: 2px;
+
+  &:disabled {
+    background-color: lighten($color: $primary, $amount: 15);
+  }
+  &:hover {
+    background-color: darken($color: $primary, $amount: 20);
+  }
 }
 .btn-block {
-    width: 100%;
+  width: 100%;
 }
 .google-btn {
-    cursor: pointer;
-    margin-top: 5px;
-    width: 100%;
-    height: 42px;
-    background-color: $blue;
+  cursor: pointer;
+  margin-top: 5px;
+  width: 100%;
+  height: 42px;
+  background-color: $blue;
+  border-radius: 2px;
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+
+  transition: box-shadow 0.3s ease;
+
+  .google-icon-wrapper {
+    position: absolute;
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
     border-radius: 2px;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-
-    transition: box-shadow 0.3s ease;
-
-    .google-icon-wrapper {
-        position: absolute;
-        margin-top: 1px;
-        margin-left: 1px;
-        width: 40px;
-        height: 40px;
-        border-radius: 2px;
-        background-color: $white;
-    }
-    .google-icon {
-        position: absolute;
-        margin-top: 11px;
-        margin-left: 11px;
-        width: 18px;
-        height: 18px;
-    }
-    .btn-text {
-        float: right;
-        margin: 11px 40px 0 0;
-        color: $white;
-        font-size: 14px;
-        letter-spacing: 0.2px;
-    }
-    &:hover {
-        box-shadow: 0 0 6px $blue;
-    }
-    &:active {
-        background: $button-active-google;
-    }
+    background-color: $white;
+  }
+  .google-icon {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 11px;
+    width: 18px;
+    height: 18px;
+  }
+  .btn-text {
+    float: right;
+    margin: 11px 40px 0 0;
+    color: $white;
+    font-size: 14px;
+    letter-spacing: 0.2px;
+  }
+  &:hover {
+    box-shadow: 0 0 6px $blue;
+  }
+  &:active {
+    background: $button-active-google;
+  }
 }
